# er-extend-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
er-extend-rs-config/: Cargo.toml
er-extend-rs-config/src/: lib.rs
er-extend-rs-discovery/: Cargo.toml
er-extend-rs-discovery/src/: lib.rs
er-extend-rs-esd/: Cargo.toml
er-extend-rs-esd/src/: config.rs  esd_grace_menu_enhancement.rs  ez_state_enter_state_hook.rs  ez_state_extender.rs  lib.rs
er-extend-rs-esd/src/ez_state_extender/: ez_state_event_extender.rs  ez_state_expression_extender.rs  ez_state_partial_copy.rs  ez_state_state_extender.rs  ez_state_state_group_extender.rs  ez_state_transition_extender.rs  stl_partial_copy.rs  talk_script_extender.rs
er-extend-rs-rva/: Cargo.toml
er-extend-rs-rva/src/: lib.rs
er-extend-rs-text/: Cargo.toml
er-extend-rs-text/src/: config.rs  lib.rs  msg_repository_lookup_entry_hook.rs
standalone/absolute-weapon/: Cargo.toml
standalone/absolute-weapon/resources/: absolute_weapon_config.toml
standalone/absolute-weapon/src/: config.rs  lib.rs  patch_weapon_reinforcements.rs  upgrade.rs
