[workspace]
resolver = "3"
members = [
    "er-extend-rs-config",
    "er-extend-rs-discovery",
    "er-extend-rs-esd",
    "er-extend-rs-rva",
    "er-extend-rs-text",
    "standalone/absolute-weapon",
]

[workspace.package]
version = "0.1.2-alpha"
edition = "2024"
repository = "https://github.com/WarmElk/er-extend-rs"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
er-extend-rs-config = { path = "er-extend-rs-config" }
er-extend-rs-discovery = { path = "er-extend-rs-discovery" }
er-extend-rs-esd = { path = "er-extend-rs-esd" }
er-extend-rs-rva = { path = "er-extend-rs-rva" }
er-extend-rs-text = { path = "er-extend-rs-text" }

eldenring = "0.13.0"
fromsoftware-shared = "0.13.0"

hudhook = "0.8.3"
imgui = "0.12.0"
pelite = "0.10.0"
retour = { version = "0.4.0-alpha.4", features = ["static-detour"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
windows-sys = { version = "0.61.2", features = ["Win32_System_LibraryLoader"] }
