[package]
name = "absolute-weapon"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
er-extend-rs-config.workspace = true
er-extend-rs-discovery.workspace = true
er-extend-rs-esd.workspace = true
er-extend-rs-rva.workspace = true

eldenring.workspace = true
fromsoftware-shared.workspace = true
hudhook.workspace = true
imgui.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lib]
crate-type = ["cdylib"]
name = "absolute_weapon"
